# TrainScan

./: .coverage  .dockerignore  .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  ML_System_Design_Doc.md  ML_System_Design_Doc_Template.md  README.md  api.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
app/: main.py
app/application/: predict_use_case.py  validate_rules_use_case.py
app/application/dto/: prediction_response.py  rule_validation_request.py  rule_validation_response.py
app/application/ports/: detection_extractor_port.py  inference_port.py  preprocessor_port.py
app/config/: config.py
app/core/: config.py
app/domain/entities/: prediction.py
app/domain/repositories/: orientation_rules_repository.py
app/domain/services/: orientation_service.py
app/infrastructure/model/: detection_extractor.py  model_loader.py  yolo_inference.py
app/infrastructure/preprocessing/: image_preprocessor.py
app/infrastructure/rendering/: batch_serializer.py  result_serializer.py
app/infrastructure/repositories/: csv_orientation_rules_repository.py
app/infrastructure/storage/: file_downloader.py  s3_client.py  storage_port.py
app/interfaces/api/: routes.py
app/templates/: index.html
deploy/: README.md  docker-compose.yml
deploy/airflow/: docker-compose.yml
deploy/nginx/: default.conf
docs/: ML_System_Design_Doc.md
orchestration/airflow/: README.md
orchestration/airflow/config/: docker-compose.yml
orchestration/airflow/dags/: wagon_orientation_pipeline.py
orchestration/airflow/scripts/: request_prediction.py
tests/: conftest.py
tests/unit/: test_api_routes.py  test_detection_service.py  test_model_loader.py  test_orientation.py  test_preprocessing.py  test_repository_and_config.py  test_serializer.py  test_usecase.py  test_validate_rules_usecase.py
